# cosmos

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
.cache/clangd/index/: EBO.cpp.51C4C1C82B0F1A1F.idx  EBO.cpp.B572ABFCDE279DC0.idx  EBO.h.8DF5ABBBD48E1BEC.idx  EBO.h.E0A8421A6F27CBDA.idx  Shader.cpp.50BE0893470C8714.idx  Shader.cpp.E440D2155E51B9C3.idx  Shader.h.3452CDAE8ABD8270.idx  Shader.h.FB4789E12C0958F7.idx  VAO.cpp.0F13C62A32959102.idx  VAO.cpp.401DE9D37C281596.idx  VAO.h.0989ABCEC96E3182.idx  VAO.h.0A3DBB87E53D9442.idx  VBO.cpp.25776DB5F6EA62C0.idx  VBO.cpp.2FD0F6AE4DCCB80B.idx  VBO.h.4BE6670DB64513FF.idx  VBO.h.D0F5471FBC85BAD5.idx  arialmt.h.22CF2151098EC6AF.idx  auCharacter.cpp.5D3765B265D257A7.idx  auCharacter.cpp.72260D0627848EEF.idx  auCharacter.h.0DD43E240472A15C.idx  auCharacter.h.A6A878B145FABEE4.idx  auColor.h.621827F8FE47E5D9.idx  auColor.h.8CF293CE379FA65E.idx  auFontRendering.cpp.54D2E14605EE78B5.idx  auFontRendering.cpp.B8E3D78C2E780762.idx  auFontRendering.h.E162B728562C08B9.idx  auFontRendering.h.E7D58B48171EA1F4.idx  auVector2.h.170E11A5D8154059.idx  auVector2.h.BF8510656C2BAC89.idx  freetype.h.BDFE614A81A3965A.idx  ftimage.h.0E37CB9865B7ECCE.idx  fttypes.h.2682BB81A889627A.idx  glad.c.DD9EDDABD73914E0.idx  glad.c.F6A1F83315C7BF0A.idx  glad.h.335E82DCD4911203.idx  glad.h.F13E526BC10E9103.idx  glfw3.h.E60D0244CA5827B6.idx  liberation_sans.h.5BD01371D42B52EF.idx  liberation_sans.h.C43F94F48DC44F78.idx  main.cpp.27E3DF2750B43327.idx  (+1 more)
cmake/: CMakeLists.txt
lib/: glad.h
lib/freetype2/freetype/config/: ftoption.h
src/: DIB.cpp  DIB.h  DrawElementsIndirectCommand.h  EBO.cpp  EBO.h  SAVE.cpp  Session.vim  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  arialmt.h  auCharacter.cpp  auCharacter.h  auColor.cpp  auColor.h  auFontRendering.cpp  auFontRendering.h  auVector2.h  glad.c  liberation_sans.h  main.cpp
src/ressources/: default.frag  default.vert
